more progress on user guide

--- a/docs/notebooks/User-Guide.ipynb
+++ b/docs/notebooks/User-Guide.ipynb
@@ -25,7 +25,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Defining the tree."
+    "## Defining the tree topology."
    ]
   },
   {
@@ -43,11 +43,32 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Effective population size (Ne)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### One Ne for the whole tree"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Branch-specific Ne"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Admixture"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -88,9 +109,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For use with multilocus data.\n",
+    "* For use with multilocus data.\n",
     "\n",
-    "Once data has been simulated, the "
+    "Once multilocus data has been simulated, the `.infer_gene_trees()` method automates the gene tree inference process across all loci."
    ]
   },
   {
@@ -98,7 +119,31 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# infer a tree for every locus\n",
+    "model.infer_gene_trees(inference_method='raxml')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Alternative inference methods include `'mrbayes'` and `'iqtree'`."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "After running gene tree inference, our inferred gene trees can be found in the new `inferred_tree` column of our dataframe:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "model.df"
+   ]
   },
   {
    "cell_type": "markdown",
