user guide edits

--- a/docs/notebooks/User-Guide.ipynb
+++ b/docs/notebooks/User-Guide.ipynb
@@ -21,15 +21,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Package structure."
+    "## Workflow"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "The user interacts with ipcoal through the Model object, through which the following are defined:\n",
+    "* Tree topology\n",
+    "* Effective population size\n",
+    "* Admixture\n",
+    "* Substitution rate\n",
+    "* Recombination rate\n",
+    "\n",
+    "Then, the methods `.sim_loci()` or `.sim_snps()` generate data based on the input parameters.\n",
+    "\n",
+    "The resulting simulated data consists of a dataframe object that holds the simulated genealogies, and matrices that contain the actual simulated sequences.\n",
+    "\n",
+    "After data simulation with `.sim_loci`, ipcoal can automatically infer a gene tree from the simulated data at each locus. These gene trees are then incorporated into the dataframe object."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -3492,7 +3503,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The `ipcoa"
+    "The `ipcoal` Model object allows users to designate effective population size, admixture, substitution rates, and recombination rates."
    ]
   },
   {
@@ -3510,11 +3521,25 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "#### Branch-specific Ne"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -3534,7 +3559,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Mutation and recombination"
+    "### Subsitution and recombination"
    ]
   },
   {
@@ -3545,9 +3570,23 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
-   "source": []
+   "outputs": [],
+   "source": [
+    "# simulate N unlinked SNPs (will run until N snps are produced)\n",
+    "model.sim_snps(1000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.df"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -3561,7 +3600,30 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# simulate N loci of len L \n",
+    "model.sim_loci(100, 3000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# view the genealogies and stats in a table\n",
+    "model.df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# view sequence data as an array\n",
+    "model.seqs"
+   ]
   },
   {
    "cell_type": "markdown",
