changes to docs formatting

--- a/docs/notebooks/Tutorial.ipynb
+++ b/docs/notebooks/Tutorial.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Tutorial"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -14,7 +21,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### provide a species tree"
+    "### Provide a species tree"
    ]
   },
   {
@@ -468,7 +475,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### create a model object"
+    "### Create a model object"
    ]
   },
   {
@@ -482,7 +489,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### if we want, we can simulate unlinked snps"
+    "### If we want, we can simulate unlinked snps"
    ]
   },
   {
@@ -690,7 +697,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### or, we might want to simulate several loci of a given length."
+    "### Or, we might want to simulate several loci of a given length."
    ]
   },
   {
@@ -942,7 +949,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### finally, we can infer gene trees for our loci:"
+    "### Finally, we can infer gene trees for our loci:"
    ]
   },
   {
