added ideas to cookbook, filled in Ne in UserGuide

--- a/docs/notebooks/Cookbook.ipynb
+++ b/docs/notebooks/Cookbook.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Cookbook"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -8,6 +15,27 @@
    "source": [
     "import ipcoal\n",
     "import toytree"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Simulating incomplete lineage sorting"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Applying D-statistics"
    ]
   },
   {
