--- a/docs/notebooks/Cookbook.ipynb
+++ b/docs/notebooks/Cookbook.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Simulating incomplete lineage sorting"
+    "## Visualizing incomplete lineage sorting"
    ]
   },
   {
@@ -3341,7 +3341,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Applying D-statistics"
+    "## Interdependence of D-statistics"
    ]
   },
   {
