--- a/docs/notebooks/Tutorial.ipynb
+++ b/docs/notebooks/Tutorial.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Tutorial"
+    "# Quickstart Tutorial"
    ]
   },
   {
@@ -21,7 +21,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Provide a species tree"
+    "### 1) Provide a species tree"
    ]
   },
   {
@@ -475,12 +475,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Create a model object"
+    "### 2) Create a model object"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "model = ipcoal.Model(tree=tree, Ne=1e6)"
    ]
@@ -489,7 +491,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### If we want, we can simulate unlinked snps"
+    "### 3a) Simulate unlinked snps"
    ]
   },
   {
@@ -697,7 +699,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Or, we might want to simulate several loci of a given length."
+    "### 3b) Simulate several loci of a given length"
    ]
   },
   {
@@ -949,7 +951,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Finally, we can infer gene trees for our loci:"
+    "### 4) Infer a gene tree for each locus"
    ]
   },
   {
