playing around with headers

--- a/docs/notebooks/Tutorial.ipynb
+++ b/docs/notebooks/Tutorial.ipynb
@@ -21,7 +21,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1) Provide a species tree"
+    "#### 1) Provide a species tree"
    ]
   },
   {
@@ -475,7 +475,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2) Create a model object"
+    "#### 2) Create a model object"
    ]
   },
   {
@@ -491,7 +491,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3a) Simulate unlinked snps"
+    "#### 3a) Simulate unlinked snps"
    ]
   },
   {
@@ -699,7 +699,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3b) Simulate several loci of a given length"
+    "#### 3b) Simulate a bunch of loci"
    ]
   },
   {
@@ -951,7 +951,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 4) Infer a gene tree for each locus"
+    "#### 4) Infer a gene tree for each locus"
    ]
   },
   {
@@ -1151,6 +1151,7 @@
     }
    ],
    "source": [
+    "# inferred_tree column is now added to the dataframe!\n",
     "model.df"
    ]
   }
