--- a/manuscript/ipcoal-biorxiv.bib
+++ b/manuscript/ipcoal-biorxiv.bib
@@ -292,3 +292,33 @@ abstract = "As population genomic datasets grow in size, researchers are faced w
     eprint = {https://academic.oup.com/sysbio/article-pdf/63/3/289/13589536/syu009.pdf},
 }
 
+@article{gronau_demography_2011,
+abstract = {Whole-genome sequences provide a rich source of information about human evolution. Here we describe an effort to estimate key evolutionary parameters based on the whole-genome sequences of six individuals from diverse human populations. We used a Bayesian, coalescent-based approach to obtain information about ancestral population sizes, divergence times and migration rates from inferred genealogies at many neutrally evolving loci across the genome. We introduce new methods for accommodating gene flow between populations and integrating over possible phasings of diploid genotypes. We also describe a custom pipeline for genotype inference to mitigate biases from heterogeneous sequencing technologies and coverage levels. Our analysis indicates that the San population of southern Africa diverged from other human populations approximately 108-157 thousand years ago, that Eurasians diverged from an ancestral African population 38-64 thousand years ago, and that the effective population size of the ancestors of all modern humans was ∼9,000. {\textcopyright} 2011 Nature America, Inc. All rights reserved.},
+author = {Gronau, Ilan and Hubisz, Melissa J. and Gulko, Brad and Danko, Charles G. and Siepel, Adam},
+doi = {10.1038/ng.937},
+file = {::},
+issn = {10614036},
+journal = {Nature Genetics},
+month = {oct},
+number = {10},
+pages = {1031--1035},
+title = {{Bayesian inference of ancient human demography from individual genome sequences}},
+volume = {43},
+year = {2011}
+}
+
+@article {green_neandertal_2010,
+	author = {Green, Richard E. and Krause, Johannes and Briggs, Adrian W. and Maricic, Tomislav and Stenzel, Udo and Kircher, Martin and Patterson, Nick and Li, Heng and Zhai, Weiwei and Fritz, Markus Hsi-Yang and Hansen, Nancy F. and Durand, Eric Y. and Malaspinas, Anna-Sapfo and Jensen, Jeffrey D. and Marques-Bonet, Tomas and Alkan, Can and Pr{\"u}fer, Kay and Meyer, Matthias and Burbano, Hern{\'a}n A. and Good, Jeffrey M. and Schultz, Rigo and Aximu-Petri, Ayinuer and Butthof, Anne and H{\"o}ber, Barbara and H{\"o}ffner, Barbara and Siegemund, Madlen and Weihmann, Antje and Nusbaum, Chad and Lander, Eric S. and Russ, Carsten and Novod, Nathaniel and Affourtit, Jason and Egholm, Michael and Verna, Christine and Rudan, Pavao and Brajkovic, Dejana and Kucan, {\v Z}eljko and Gu{\v s}ic, Ivan and Doronichev, Vladimir B. and Golovanova, Liubov V. and Lalueza-Fox, Carles and de la Rasilla, Marco and Fortea, Javier and Rosas, Antonio and Schmitz, Ralf W. and Johnson, Philip L. F. and Eichler, Evan E. and Falush, Daniel and Birney, Ewan and Mullikin, James C. and Slatkin, Montgomery and Nielsen, Rasmus and Kelso, Janet and Lachmann, Michael and Reich, David and P{\"a}{\"a}bo, Svante},
+	title = {A Draft Sequence of the Neandertal Genome},
+	volume = {328},
+	number = {5979},
+	pages = {710--722},
+	year = {2010},
+	doi = {10.1126/science.1188021},
+	publisher = {American Association for the Advancement of Science},
+	abstract = {Neandertals, the closest evolutionary relatives of present-day humans, lived in large parts of Europe and western Asia before disappearing 30,000 years ago. We present a draft sequence of the Neandertal genome composed of more than 4 billion nucleotides from three individuals. Comparisons of the Neandertal genome to the genomes of five present-day humans from different parts of the world identify a number of genomic regions that may have been affected by positive selection in ancestral modern humans, including genes involved in metabolism and in cognitive and skeletal development. We show that Neandertals shared more genetic variants with present-day humans in Eurasia than with present-day humans in sub-Saharan Africa, suggesting that gene flow from Neandertals into the ancestors of non-Africans occurred before the divergence of Eurasian groups from each other.},
+	issn = {0036-8075},
+	URL = {https://science.sciencemag.org/content/328/5979/710},
+	eprint = {https://science.sciencemag.org/content/328/5979/710.full.pdf},
+	journal = {Science}
+}
