--- a/manuscript/ipcoal-biorxiv.tex
+++ b/manuscript/ipcoal-biorxiv.tex
@@ -83,12 +83,12 @@ $^{2}$ To whom correspondence should be addressed
 \section{Introduction}
 The coalescent process \cite{kingman_coalescent_1982,hudson_testing_1983} is used to model the distribution of genealogical ancestry across a set of sampled genomes. It approximates a neutral Wright-Fisher process of random mating within populations where the expected waiting times between subsequent coalescent events can be drawn from a statistical distribution based on the effective population size. This makes simulation of genealogies under the coalescent process \cite{hudson_generating_2002} a computationally efficient approach for integrating over genealogical variation (i.e., treating it as a latent random variable) when making population genetic inferences \cite{beerli_coalescent_2001}. 
 
-Demographic models describe the parameters involved in a coalescent simulation. Highly complex models may include factors such as changes in population sizes, population divergence times, and gene flow (admixture) between populations. For example, in the study of human population history, a demographic model may describe the divergence of human populations among different continents, the expansion of these population sizes separately in Africa, Eurasia, and the Americas, and subsequent admixture among populations \cite{reich_who_2018,adrion_community_maintained_2019}. Demographic models are also routinely used in phylogenetics, where the goal is to jointly infer a topology (i.e., the relationships among connected populations) in addition to the parameters of a demographic model applied to the topology \cite{degnan_gene_2009,knowles_estimating_2011}. 
+Demographic models describe the parameters involved in a coalescent simulation. Highly complex models may include factors such as changes in population sizes, population divergence times, and gene flow (admixture) between populations. For example, in the study of human population history, a demographic model may describe the divergence of human populations among different continents, the expansion of these population sizes separately in Africa, Eurasia, and the Americas, and subsequent admixture among populations \cite{reich_who_2018,green_neandertal_2010,gronau_demography_2011}. Demographic models are also routinely used in phylogenetics, where the goal is to jointly infer a topology (i.e., the relationships among connected populations) in addition to the parameters of a demographic model applied to the topology \cite{degnan_gene_2009,knowles_estimating_2011}. 
 
 The ability to simulate realistic sequence data evolving on genealogies sampled from complex demographic models has enabled new types of inference from genomic data, from fitting parameters to demographic models and performing model comparisons \cite{chung_bayesian_2017}; to performing posterior predictive data analyses \cite{brown_predictive_2014}; to generating training datasets for machine learning methods \cite{schrider_learning_2017} or validating new inference methods \cite{adrion_community_maintained_2019}. Despite the impressive design and capabilities of recent state-of-the-art coalescent simulation tools, like msprime \cite{kelleher_efficient_2016}, it is difficult for a single package to be optimized for all types of use. To this end, msprime lacks functionality in several ways that limit its utility for studying deeper-scale (e.g., phylogenetic) data sets. Here we describe a new Python package, ipcoal, which acts as a wrapper around msprime with the aim of filling this niche: to provide a simple method for simulating genealogies and sequences on species trees or networks for phylogenetic-scale analyses.
 
 \section{Phylogenomic data simulation}
-We make the following distinctions among terms in ipcoal: a genealogy is the true history of ancestry among a set of sampled genes; a gene tree is an empirical estimate of a genealogy based on sequences from some region of the genome; and a species tree is a demographic model including a topology. As phylogenetics transitions from a focus on multi-locus data sets \cite{knowles_estimating_2011} to the analysis of whole genomes -- and the spatial distribution of correlated genealogical variation along chromosomes -- the distinction between unobservable genealogical variation and the empirical gene tree estimates that can be made from observable sequence data will become increasingly relevant. 
+We make the following distinctions among terms in ipcoal: a genealogy is the true history of ancestry among a set of sampled genes; a gene tree is an empirical estimate of a genealogy based on sequences from some region of the genome; and a species tree is a demographic model including a topology \cite{pamilo_relationships_1988,maddison_gene_1997}. As phylogenetics transitions from a focus on multi-locus data sets \cite{knowles_estimating_2011} to the analysis of whole genomes -- and the spatial distribution of correlated genealogical variation along chromosomes -- the distinction between unobservable genealogical variation and the empirical gene tree estimates that can be made from observable sequence data will become increasingly relevant. 
 
 Simulating realistic sequence data under the multispecies coalescent model has typically been achieved through a two-step approach: a set of independent genealogies is first simulated, and then a model of sequence evolution is applied to model substitution along the edges of each tree to produce sequence alignments. This phylogenetic workflow differs from standard population-level coalescent simulations in several ways: (1) phylogenies generally contain many more lineages than population genetic analyses which makes describing demographic models to coalescent simulators burdensome and error-prone; (2) the phylogenetic workflow typically ignores recombination, but such data can now be simulated easily by modern coalescent software; and (3) the phylogenetic workflow applies a Markov model of sequence substitution rather than the more simple infinite-sites process, and therefore allows for more complex substitution models that can include homoplasy. In ipcoal we have combined the best aspects of each approach so that it is easy to describe demographic models for large trees, sequence data can be simulated on independent or linked genealogies, and sequence data can be simulated under complex models of sequence evolution. 
 
