--- a/docs/notebooks/Tutorial.ipynb
+++ b/docs/notebooks/Tutorial.ipynb
@@ -3518,7 +3518,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Simulating (unlinked) SNPs\n"
+    "#### Simulating (unlinked) SNPs\n"
    ]
   },
   {
